#content and {{image}} fixed on all major browsers (incl. safari, chrome, firefox) but banner still broken on firefox.

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -142,6 +142,10 @@ iframe#twitter-widget-0 {
 	z-index: 20; /* overlay #content over #twitter-timeline */
 }
 
+#content > article img {
+    max-width: 100%;
+}
+
 .post-wrapper {
     background: #E7DDE8; /* #F6F6F6 */
     position: relative;
@@ -154,7 +158,7 @@ iframe#twitter-widget-0 {
     margin-bottom: 1px;
     text-align: center;
     font-size: 14px;
-    padding: 20px 20px 0 20px;
+    padding: 20px 20px 20px 20px;
 }
 
 .post-title {
@@ -167,9 +171,10 @@ iframe#twitter-widget-0 {
 
 .post-content {
 	margin: 20px auto;
+    padding: auto 4px;
 }
 
-img.post-image { /* post {{image}} */
+img.post-image { /* {{image}} */
     position: absolute;
     top: 0;
     bottom: 0;
